# trend-sentiment-analysis-agent

./: .gitignore  README.md  package.json
backend/: .gitignore
backend/trendsenti/: Makefile  README.md  pyproject.toml
backend/trendsenti/app/: __init__.py  __main__.py  requirements.txt
backend/trendsenti/app/src/: agent.py  main.py
src/app/: layout.tsx  page.tsx
src/app/projects/[id]/: page.tsx
src/app/projects/new/: page.tsx
src/components/: CreateProjectForm.tsx  LoadingBar.tsx  Navbar.tsx  ProjectList.tsx  SentimentScore.tsx
src/types/: project.ts
