# File: pyproject.toml
[tool.poetry]
name = "trendsenti"
version = "0.1.0"
description = "A FastAPI application for Google searching"
readme = "README.md"
authors = ["Hackerthon Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"