# File: pyproject.toml
[tool.poetry]
name = "trendsenti"
version = "0.1.0"
description = "A FastAPI application for Google searching"
readme = "README.md"
authors = ["Hackerthon Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.24.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
langchain-openai = "^0.3.2"
tavily-python = "^0.5.0"
langgraph = "^0.2.67"
langsmith = "^0.3.1"
langchain-anthropic = "^0.3.4"
langchain = "^0.3.15"
load-dotenv = "^0.1.0"
langchain-community = "^0.3.15"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"